fix answer not showing

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 h1 {
-    color: #e3350a;
+    color: #007bff;
 }
 
 .name-input {
@@ -32,7 +32,7 @@ h1 {
 .name-input button {
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #007bff;
+    background-color: #19edea;
     color: #fff;
     border: none;
     border-radius: 5px;
